extend next things section

--- a/talks/2017-08-17/working-with-http2-in-elixir/slides.html
+++ b/talks/2017-08-17/working-with-http2-in-elixir/slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Let's build a server</title>
+    <title>Working with HTTP/2 in Elixir</title>
     <meta charset="utf-8">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -840,6 +840,12 @@ class: middle
 
 ---
 
+class: middle, center
+
+![](grpc_diagram.svg)
+
+---
+
 class: middle
 
 ## **GRPC**
@@ -867,6 +873,12 @@ class: middle
 
 ---
 
+class: middle, center
+
+![](genstage.jpg)
+
+---
+
 class: middle
 
 ## **Docs**
@@ -888,6 +900,8 @@ class: middle
 
 ## *@internets -* CrowdHailer
 
+### Lead Developer at [paywithcurl.com](https://paywithcurl.com/)
+#### *Using Elixir everyday*
 ---
 
 class: middle
