add ace image to talk

--- a/talks/2017-08-17/working-with-http2-in-elixir/slides.html
+++ b/talks/2017-08-17/working-with-http2-in-elixir/slides.html
@@ -188,9 +188,9 @@ It is still useful in a variety of locations, such as gRPC which we come back to
 
 ---
 
-class: middle
+class: middle, center
 
-pic of 0.12.0 on hex.pm
+![](ace_0_12_0.png)
 
 ---
 
@@ -732,6 +732,9 @@ end
 class: middle
 
 ## Flow control
+
+
+separate generating frames from sending frames
 
 ---
 
