add link to video on youtube

--- a/talks/2017-08-17/working-with-http2-in-elixir/index.html
+++ b/talks/2017-08-17/working-with-http2-in-elixir/index.html
@@ -37,7 +37,7 @@
       </p>
       <p>
         <a href="slides.html">Slides</a>
-        <a href="">Video</a>
+        <a href="https://www.youtube.com/watch?v=zqzkrUVfv-k">Video</a>
       </p>
     </main>
     <footer>
