--- a/talks/2017-10-31/live-coded-chat-app-in-45-minutes/index.html
+++ b/talks/2017-10-31/live-coded-chat-app-in-45-minutes/index.html
@@ -30,7 +30,7 @@
         Testing and documenting APIs.
       </p>
       <p>
-        I gave this talk at the <a href="http://elixir.london/">Elixir London meetup</a>.
+        I gave this talk at the <a href="https://www.meetup.com/Elixir-London/">Elixir London meetup</a>.
       </p>
       <p>
         <a href="https://github.com/CrowdHailer/elixir-on-docker">Elixir-on-Docker</a><br>
