link image to video

--- a/talks/2017-10-31/live-coded-chat-app-in-45-minutes/index.html
+++ b/talks/2017-10-31/live-coded-chat-app-in-45-minutes/index.html
@@ -17,7 +17,9 @@
     </header>
     <main class="article">
       <h1>Live coded chat app in 45 minutes</h1>
-      <img src="docker-cloud-screenshot.png" alt="Docker cloud screenshot" style="max-width:100%;"/>
+      <a href="https://skillsmatter.com/skillscasts/11072-elixir-london-october">
+        <img src="docker-cloud-screenshot.png" alt="Docker cloud screenshot" style="max-width:100%;"/>
+      </a>
       <p>
         This talk gives a concrete example of taking an Elixir application to production.
         In this live coding session I develop a simple chat application.
