stash remark js

--- a/talks/2017-11-17/functional-conf/slides.html
+++ b/talks/2017-11-17/functional-conf/slides.html
@@ -971,7 +971,7 @@ class: middle
 #### [github.com/crowdhailer/elixir-on-docker](github.com/crowdhailer/elixir-on-docker)
 
     </textarea>
-    <script src="/remark-latest.min.js">
+    <script src="remark-latest.min.js">
     // <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
