link to functional conf talk

--- a/talks/2017-11-17/all-chat-applications-lesson-2/index.html
+++ b/talks/2017-11-17/all-chat-applications-lesson-2/index.html
@@ -17,9 +17,7 @@
     </header>
     <main class="article">
       <h1>All chat applications; lesson 2</h1>
-      <a href="#">
-        <img src="zebra.jpg" alt="A heard of Zebra" style="max-width:100%;"/>
-      </a>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/JEXT-qaeeyg" frameborder="0" allowfullscreen></iframe>
       <p>
         Elixir is a powerful tool. In just 15 minutes you can have an acceptable chat application. Here endeth the blog post, but wait you have more questions.
       </p>
@@ -34,7 +32,7 @@
       </p>
       <p>
         <a href="slides.html">Slides</a><br>
-        <a href="#">Video, coming soon</a>
+        <a href="https://www.youtube.com/watch?v=JEXT-qaeeyg">Video</a>
       </p>
     </main>
     <footer>
