fix merge conflict artifacts

--- a/2018-01-17/simple-web-services-with-ace/index.html
+++ b/2018-01-17/simple-web-services-with-ace/index.html
@@ -93,11 +93,7 @@
         the list of default options says this service will start using http.
       </li>
       <li>
-<<<<<<< acf92225539cd638fcbb62779564af39b18c0262
-        For any request this service will return a `200 OK` response.
-=======
-        For any request this service will return an <code class="language-bash">200 OK</code> response.
->>>>>>> add formatting of inline code parts
+        For any request this service will return a <code class="language-bash">200 OK</code> response.
       </li>
     </ol>
     <h2>Starting a service</h2>
@@ -224,11 +220,7 @@
     <h2>Supervising a service</h2>
     <p>
       A production ready greetings service should be started and supervised by the OTP application.
-<<<<<<< acf92225539cd638fcbb62779564af39b18c0262
-      The `Greetings` module and list of starting arguments are added to the project's children.
-=======
-      The <code class="language-elixir">Greetings</code> module and list of starting arguments are added to the projects children.
->>>>>>> add formatting of inline code parts
+      The <code class="language-elixir">Greetings</code> module and list of starting arguments are added to the project's children.
       The service will now be started when the OTP application is run.
     </p>
     <pre><code class="language-elixir">
